daf1aa9 Fix mobile header overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -97,15 +97,17 @@ main {
     header nav {
         display: flex;
         flex-direction: column;
-        align-items: center;
         gap: 10px;
     }
+    header nav .logo i {
+        padding: 5px 10px;
+        margin-right: 5px;
+    }
     header nav ul {
-        display: grid;
-        grid-template-columns: repeat(4, minmax(0, 1fr));
-        width: 100%;
+        display: flex;
+        justify-content: space-between;
         align-items: center;
-        gap: 4px;
+        gap: 7px;
     }
     header nav ul li {
         display: flex;
@@ -123,14 +125,7 @@ main {
         padding: 0;
         border: none;
     }
-    header nav .logo i {
-        padding: 5px 10px;
-        margin-right: 5px;
-    }
-    header nav .logo {
-        flex-direction: row;
-    }
-    header nav ul li a {
-        font-size: 12px;
+    header nav ul {
+        font-size: 14px;
     }
 }
